# altimetry_io

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yaml
conda_recipe/: meta.yaml
src/altimetry/io/: __init__.py
src/altimetry/io/catalog/: __init__.py  _model.py
src/altimetry/io/model/: __init__.py  _model.py
src/altimetry/io/resources/: catalog.yaml
src/altimetry/io/sources/: __init__.py  _cls_table.py  _file_collection.py  _model.py  _sc_collection.py
src/altimetry/io/utilities/: __init__.py  _data.py  _misc.py
src/cnes_alti_reader/: __init__.py
src/cnes_alti_reader/catalog/: __init__.py  _model.py
src/cnes_alti_reader/model/: __init__.py  _model.py
src/cnes_alti_reader/resources/: catalog.yaml
src/cnes_alti_reader/sources/: __init__.py  _cls_table.py  _file_collection.py  _model.py  _sc_collection.py
src/cnes_alti_reader/utilities/: __init__.py  _data.py  _misc.py
src/resources/: catalog.yaml
tests/: conftest.py  test_model.py
tests/catalog/: test_catalog.py
tests/sources/cls_table/: conftest.py  test_cls_table.py
tests/sources/cls_table/resources/COMMUN/sad/: MIS_MissionManagement.par
tests/sources/file_collection/: conftest.py  test_file_collection.py
tests/sources/sc_collection/: test_sc_collection.py
tests/utilities/: test_data.py  test_misc.py
