[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "altimetry-io"
dynamic = ["version"]
authors = [
    {name = "Anne-Sophie Tonneau", email = "atonneau@groupcls.com"},
    {name = "Thomas Zilio", email = "tzilio@groupcls.com"},
    {name = "Robin Chevrier", email = "rchevrier@groupcls.com"}
]
maintainers = [
    {name = "Anne-Sophie Tonneau", email = "atonneau@groupcls.com"},
    {name = "Thomas Zilio", email = "tzilio@groupcls.com"},
    {name = "Robin Chevrier", email = "rchevrier@groupcls.com"}
]
description = "Provide a unified way to read a data collection, independent of the underlying data representation."
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Development Status :: 4 - Beta"]

requires-python = ">=3.11"
dependencies = [
    "fsspec",
    "numpy",
    "pandas",
    "xarray",
    "files-collections",
]

[project.optional-dependencies]
polygon = [
    "geopandas",
    "pyinterp",
    "shapely",
]
sources = [
    "cls_tables",
    "swot_calval",
]
testing = [
    "pytest",
    "geopandas",
    "pyinterp",
    "shapely",
    "h5py",
    "dask",
    "numba"
]
coverage = ["pytest-cov"]
documentation = [
]
dev-tools = [
    "ruff",
    "pre-commit"
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[project.urls]
repository = "https://github.com/robin-cls/altimetry_io"

[tool.pytest.ini_options]
addopts=["--import-mode=importlib"]
filterwarnings = [
    # Turn all other warnings into errors
    "error",
    # Can be safely ignored according to
    # https://github.com/Unidata/netcdf4-python/issues/1354
    "ignore:numpy\\.ndarray size changed"
]

[tool.ruff]
src = ["src/altimetry/io"]
include = ["src/altimetry/io/**/*.py", "tests/**/*.py", "docs/**/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle error
    "EM",  # flake8-return
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # import sorting
    "PTH", # flake8-use-pathlib
    "W",   # pycodestyle warning
    "ARG", # flake8-unused-arguments
    "PT",  # flake8-pytest-style
    "INP", # flake8-no-pep420
    "COM", # flake8-commas
    "RUF", # Ruff-specific rules
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "RET",
]

ignore = [
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "ARG002", # Unused argument method (inheritance constraint)
    "B027",   # empty-method-without-abstract-decorator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",
    "S101",   # assert detected
    "SLF001", # Private member access
    "INP001", # __init__.py in tests
]

[tool.ruff.lint.isort]
known-first-party = ["altimetry", "tests"]
